--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mesto",
   "version": "0.1.0",
-  "homepage": "https://nastya-kl.github.io/mesto-react/",
+  "homepage": "https://nastya-kl.github.io/mesto-react-auth/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
